<resources>
    <string name="app_name">UFR Emploi du temps</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_sync_url">Sync URL</string>
    <string name="pref_header_sync">Sync</string>
    <string name="pref_header_ui">Aspect</string>
    <string name="pref_use_personnalized_event_color">Custom events background color</string>
    <string name="pref_events_color">Events background color</string>
    <string name="qr_code_scan_prompt">Scan your time schedule QR code URL by holding your phone in landscape mode</string>
    <string name="success_qr_code_url_saving">Successfully saved the sync URL from QR code.</string>
    <string name="failed_qr_code_url_saving">Unable to save scanned URL from QR code.</string>
    <string name="forbidden_camera_permission_hint">Permission to use camera denied.</string>
    <string name="success_loaded_timetable_from_file">Time schedule loaded from saved file.</string>
    <string name="no_events">No events</string>
    <string name="no_loaded_events">No loaded events</string>
    <string name="successfully_updated">Update successful.</string>
    <string name="failed_update">Unable to update.</string>
    <string name="failed_timetable_parsing">Unable to parse timetable from downloaded file.</string>
    <string name="failed_timetable_io_reading">Unable to read the timetable from downloaded file.</string>
    <string name="failed_timetable_online_timeout">Connexion to URL timed out.</string>
    <string name="url_marformation">Malformed URL.</string>
    <string name="added_to_hidden_events_types">added to hidden event types.</string>
    <string name="title_activity_hidden_events">Hidden events</string>
    <string name="modifications_saved">Changes saved.</string>
    <string name="title_dialog_save_before_quitting">Save before exit ?</string>
    <string name="dialog_promp_save_modifications_before_quitting">Do you want to save changes before exit ?</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="sync_image_contentdescription">double arrow sync icon</string>
    <string name="Description">Description</string>
    <string name="Location">Location</string>
    <string name="Button_hide_this_type_of_event">Hide this type of events</string>
    <string name="Button_title_qr_code_scan_url">Scan URL QR code</string>
    <string name="hidden_events_list_hint">This list contains all the events you decided to hide:</string>
    <string name="left_arrow_image_contentdescription">Left arrow</string>
    <string name="right_arrow_image_contentdescription">Right arrow</string>
    <string name="trashcan_image_contentdescription">Trash can</string>
    <string name="configure_hidden_events">Configure hidden events</string>
    <string name="Filter_events">Events filtering</string>
    <string name="Enable_events_filtering">Enable events filtering</string>
    <string name="already_updating">Trying to update, please wait.</string>
    <string name="failed_url_resolution">Unable to reach URL (check your network connection).</string>
    <string name="about_app">About app</string>
    <string name="Help">Help</string>
    <string name="localization_prefix">en</string>
    <string name="how_to_use">How to use</string>
    <string name="loading">Loading…</string>
    <string name="show_fab">Show the \"Go to Today\" button</string>
    <string name="set_fab_alpha">Régler l\'opacité du bouton</string>
    <string name="set_fab_alpha_hint">Configure the transparency of the \"go to today\" button from 0 (transparent) to 100 (opaque)</string>
    <string name="sync_on_start">Sync on app start</string>
    <string name="pref_sync_url_summary">Enter or view your schedule URL manually</string>
    <string name="pref_scan_qr_code_summary">Scan the QR code corresponding to your schedule URL</string>
    <string name="pref_sync_on_start_summary">Update your schedule on app start</string>
    <string name="pref_event_filtering_summary">"Manage the hidden events. "</string>
    <string name="pref_sync_on_start_delay">Sync on start delay</string>
    <string name="pref_sync_on_start_delay_summary">Set the delay after the last sync to trigger sync on app start.</string>
    <string name="error_no_timeschedule_to_load">No timeschedule available</string>
    <string name="modify_url">Modify URL</string>


</resources>
