<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#56BF52"
    android:orientation="vertical"
    android:padding="8dp"
    android:id="@+id/event_detail_layout_main">



    <TextView
        android:id="@+id/textview_event_detail_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#18000000"

        android:gravity="center"
        android:padding="16dp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="UE 3.3 Electromagnétisme TD 4"
        android:textColor="@android:color/background_light"
        android:textSize="22dp"
        android:textStyle="normal|bold"
        android:typeface="sans" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/times_zoomed_event_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="8dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textview_event_detail_dtstart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35"

                    android:gravity="end|bottom"
                    android:paddingBottom="0dp"
                    android:paddingRight="5dp"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="14:00"
                    android:textColor="@android:color/background_light"
                    android:textSize="21sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/textview_event_detail_duration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:drawableBottom="@drawable/ic_event_arrow"
                    android:gravity="center"
                    android:paddingBottom="0dp"
                    android:text="1h30"
                    android:textColor="#eeffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textview_event_detail_dtend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35"
                    android:gravity="start|bottom"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="15:30"
                    android:textColor="@android:color/background_light"
                    android:textSize="21sp"
                    android:textStyle="normal|bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#14000000" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="2dp"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/Location"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textview_event_detail_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="GR E1 1060"
                android:textColor="@android:color/background_light"
                android:textSize="21sp"
                android:typeface="sans" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#14000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"

                android:paddingBottom="2dp"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/Description"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textview_event_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:paddingBottom="8dp"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="L2 Physique/Chimie Gp 4 \n LANSAC YVES \n (Exported:10/11/2016 16:07)"
                android:textColor="@android:color/background_light"
                android:textSize="21sp"
                android:typeface="sans" />
            <Button
                android:text="@string/Button_hide_this_type_of_event"
                android:id="@+id/exclude_event_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="#00000000"
                android:padding="5dp"
                android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
                android:drawablePadding="5dp"
                />
                <!--
                android:shadowColor="@color/text_shadow"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="2" -->


        </LinearLayout>
    </ScrollView>


</LinearLayout>
